...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:hint="Search followings" />

                <ImageButton
                    android:id="@+id/following_filter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
...
    <LinearLayout
        android:id="@+id/filter_results_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/following_header"
        app:layout_constraintBottom_toTopOf="@id/listview_following">

        <TextView
            android:id="@+id/filter_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
...
