...
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/emotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Emotion"
                android:textStyle="bold" />

...
